--- a/GUI/App.xaml
+++ b/GUI/App.xaml
@@ -1,8 +1,9 @@
-﻿<Application x:Class="GUI.App"
+﻿<Application x:Class="WpfApp2.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GUI"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:WpfApp2"
+             Startup="Application_Startup"
+             Exit="Application_Exit">
     <Application.Resources>
          
     </Application.Resources>
